Integration of jekyll-scholar + adding content to publications.md

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -1,10 +1,10 @@
 % This file was created with JabRef 2.10.
-% Encoding: Cp1252
+% Encoding: UTF8
 
 
 @InProceedings{Frey2014,
   Title                    = {Teegi: Tangible EEG Interface},
-  Author                   = {Jérémy Frey and Renaud Gervais and Stéphanie Fleck and Fabien Lotte and Martin Hachet},
+  Author                   = {JÃ©rÃ©my Frey and Renaud Gervais and StÃ©phanie Fleck and Fabien Lotte and Martin Hachet},
   Booktitle                = {Proceedings of the 27th Annual ACM Symposium on User Interface Software and Technology},
   Year                     = {2014},
   Note                     = {Accepted},
@@ -17,7 +17,7 @@
 
 @InProceedings{Gervais2014,
   Title                    = {The Good, the Bad and the Hacked: Creative Coding on Objects},
-  Author                   = {Renaud Gervais and Jérémy Laviole and Asier Marzo},
+  Author                   = {Renaud Gervais and JÃ©rÃ©my Laviole and Asier Marzo},
   Booktitle                = {Proceedings of the 8th International Conference on Tangible, Embedded and Embodied Interaction},
   Year                     = {2014},
   Note                     = {Poster},
