Choosing appropriate citation style + config

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -20,7 +20,7 @@
   Author                   = {Renaud Gervais and Jérémy Laviole and Asier Marzo},
   Booktitle                = {Proceedings of the 8th International Conference on Tangible, Embedded and Embodied Interaction},
   Year                     = {2014},
-  Note                     = {Poster},
+  Note                     = {WiP Poster},
   Publisher                = {ACM},
   Series                   = {TEI '14},
 
