--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -7,7 +7,7 @@
   Author                   = {Jérémy Frey and Renaud Gervais and Stéphanie Fleck and Fabien Lotte and Martin Hachet},
   Booktitle                = {Proceedings of the 27th Annual ACM Symposium on User Interface Software and Technology},
   Year                     = {2014},
-  Note                     = {Accepted},
+  Note                     = {},
   Publisher                = {ACM},
   Series                   = {UIST '14},
 
@@ -18,9 +18,9 @@
 @InProceedings{Gervais2014,
   Title                    = {The Good, the Bad and the Hacked: Creative Coding on Objects},
   Author                   = {Renaud Gervais and Jérémy Laviole and Asier Marzo},
-  Booktitle                = {Proceedings of the 8th International Conference on Tangible, Embedded and Embodied Interaction},
+  Booktitle                = {Proceedings of the 8th International Conference on Tangible, Embedded and Embodied Interaction WiP Poster},
   Year                     = {2014},
-  Note                     = {WiP Poster},
+  Note                     = {},
   Publisher                = {ACM},
   Series                   = {TEI '14},
 
