Adding pdf links to the publications

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -7,10 +7,10 @@
   Author                   = {Jérémy Frey and Renaud Gervais and Stéphanie Fleck and Fabien Lotte and Martin Hachet},
   Booktitle                = {Proceedings of the 27th Annual ACM Symposium on User Interface Software and Technology},
   Year                     = {2014},
-  Note                     = {},
   Publisher                = {ACM},
   Series                   = {UIST '14},
 
+  File                     = {:https\://hal.inria.fr/hal-01025621:URL},
   Owner                    = {Renaud},
   Timestamp                = {2014.07.22}
 }
@@ -20,7 +20,6 @@
   Author                   = {Renaud Gervais and Jérémy Laviole and Asier Marzo},
   Booktitle                = {Proceedings of the 8th International Conference on Tangible, Embedded and Embodied Interaction WiP Poster},
   Year                     = {2014},
-  Note                     = {},
   Publisher                = {ACM},
   Series                   = {TEI '14},
 
