Adding cursar project

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -15,6 +15,23 @@
   Timestamp                = {2014.07.22}
 }
 
+@InProceedings{Gervais2015,
+  Title                    = {Pointing in Spatial Augmented Reality from 2D Pointing Devices},
+  Author                   = {Gervais, Renaud and Frey, J{\'e}r{\'e}my and Hachet, Martin},
+  Booktitle                = {INTERACT},
+  Year                     = {2015},
+
+  Address                  = {Bamberg, Germany},
+  Month                    = Sep,
+  Pages                    = {8},
+
+  Hal_id                   = {hal-01153647},
+  Hal_version              = {v1},
+  Keywords                 = {Spatial Augmented Reality ; Pointing devices},
+  Pdf                      = {https://hal.archives-ouvertes.fr/hal-01153647/file/PointingSAR.pdf},
+  Url                      = {https://hal.archives-ouvertes.fr/hal-01153647}
+}
+
 @InProceedings{Gervais2014,
   Title                    = {The Good, the Bad and the Hacked: Creative Coding on Objects},
   Author                   = {Renaud Gervais and Jérémy Laviole and Asier Marzo},
