--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -7,6 +7,7 @@
   Author                   = {Jérémy Frey and Renaud Gervais and Stéphanie Fleck and Fabien Lotte and Martin Hachet},
   Booktitle                = {Proceedings of the 27th Annual ACM Symposium on User Interface Software and Technology},
   Year                     = {2014},
+  Month                    = {oct},
   Publisher                = {ACM},
   Series                   = {UIST '14},
 
@@ -22,7 +23,7 @@
   Year                     = {2015},
 
   Address                  = {Bamberg, Germany},
-  Month                    = Sep,
+  Month                    = {sep},
   Pages                    = {8},
 
   Hal_id                   = {hal-01153647},
@@ -37,6 +38,7 @@
   Author                   = {Renaud Gervais and Jérémy Laviole and Asier Marzo},
   Booktitle                = {Proceedings of the 8th International Conference on Tangible, Embedded and Embodied Interaction WiP Poster},
   Year                     = {2014},
+  Month                    = {feb},
   Publisher                = {ACM},
   Series                   = {TEI '14},
 
