Adding tports and tobe publication

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -16,6 +16,21 @@
   Timestamp                = {2014.07.22}
 }
 
+@InProceedings{Gervais2016a,
+  Title                    = {{TOBE: Tangible Out-of-Body Experience}},
+  Author                   = {Gervais, Renaud and Frey, J{\'e}r{\'e}my and Gay, Alexis and Lotte, Fabien and Hachet, Martin},
+  Booktitle                = {{Tangible, Embedded and Embodied Interaction (TEI)}},
+  Year                     = {2016},
+
+  Address                  = {Eindhoven, Netherlands},
+  Month                    = Feb,
+
+  Hal_id                   = {hal-01215499},
+  Hal_version              = {v1},
+  Keywords                 = {Physiological Computing ; Tangible Interaction ; Spatial Augmented Reality ; EEG ; ECG ; EDA},
+  Url                      = {https://hal.archives-ouvertes.fr/hal-01215499}
+}
+
 @InProceedings{Gervais2015,
   Title                    = {Pointing in Spatial Augmented Reality from 2D Pointing Devices},
   Author                   = {Gervais, Renaud and Frey, J{\'e}r{\'e}my and Hachet, Martin},
@@ -44,5 +59,20 @@
 
   Owner                    = {Renaud},
   Timestamp                = {2014.07.22}
+}
+
+@InProceedings{Gervais2016,
+  Title                    = {{Tangible Viewports: Getting Out of Flatland in Desktop Environments}},
+  Author                   = {Gervais, Renaud and Sol Roo, Joan and Hachet, Martin},
+  Booktitle                = {{Tangible, Embedded and Embodied Interaction (TEI)}},
+  Year                     = {2016},
+
+  Address                  = {Eindhoven, Netherlands},
+  Month                    = {feb},
+
+  Hal_id                   = {hal-01215502},
+  Hal_version              = {v1},
+  Keywords                 = {Tangible Interaction ; Spatial Augmented Reality},
+  Url                      = {https://hal.archives-ouvertes.fr/hal-01215502}
 }
 
