Correcting bib entries

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -19,11 +19,13 @@
 @InProceedings{Gervais2016a,
   Title                    = {{TOBE: Tangible Out-of-Body Experience}},
   Author                   = {Gervais, Renaud and Frey, J{\'e}r{\'e}my and Gay, Alexis and Lotte, Fabien and Hachet, Martin},
-  Booktitle                = {{Tangible, Embedded and Embodied Interaction (TEI)}},
+  Booktitle                = {{Proceedings of the 10th International Conference on Tangible, Embedded and Embodied Interaction}},
   Year                     = {2016},
 
   Address                  = {Eindhoven, Netherlands},
-  Month                    = Feb,
+  Month                    = {feb},
+  Publisher                = {ACM},
+  Series                   = {TEI '16},
 
   Hal_id                   = {hal-01215499},
   Hal_version              = {v1},
@@ -64,11 +66,13 @@
 @InProceedings{Gervais2016,
   Title                    = {{Tangible Viewports: Getting Out of Flatland in Desktop Environments}},
   Author                   = {Gervais, Renaud and Sol Roo, Joan and Hachet, Martin},
-  Booktitle                = {{Tangible, Embedded and Embodied Interaction (TEI)}},
+  Booktitle                = {{Proceedings of the 10th International Conference on Tangible, Embedded and Embodied Interaction}},
   Year                     = {2016},
 
   Address                  = {Eindhoven, Netherlands},
   Month                    = {feb},
+  Publisher                = {ACM},
+  Series                   = {TEI '16},
 
   Hal_id                   = {hal-01215502},
   Hal_version              = {v1},
