--- a/_posts/2015-10-22-tobe.md
+++ b/_posts/2015-10-22-tobe.md
@@ -14,7 +14,7 @@ share: true
 
 [Teegi](/teegi-tangible-eeg-interface/) was our first attempt at merging tangible avatars and physiological computing. However, it was limited to EEG signals. We wanted to go further than raw signals and give *freedom* to the users, inviting them to create and define their own tangible self-representations, to gain insights on their inner selves.
 
-With Tobe, a toolkit to create Tangible Out-of-Body Experiences, we propose a toolkit that lets users explore their own physiological states on their own. We cover the tangible avatar creation (through 3D printing), the physiological sensors creation (such as EDA, ECG and EEG leveraging open hardware solutions -- [Bitalino](http://www.bitalino.com) and [OpenBCI](http://www.openbci.com/) boards), the signal processing pipeline (using [OpenViBE](http://openvibe.inria.fr/)) and the visual representations of the signals (using [vvvv](http://vvvv.org)). We hope that this toolkit could eventually be used to foster reflection on our own selves and create empathy with others.
+With Tobe, a toolkit to create Tangible Out-of-Body Experiences, we propose a toolkit that lets users explore their physiological states on their own. We cover the tangible avatar creation (through 3D printing), the physiological sensors creation (such as EDA, ECG and EEG leveraging open hardware solutions -- [Bitalino](http://www.bitalino.com) and [OpenBCI](http://www.openbci.com/) boards), the signal processing pipeline (using [OpenViBE](http://openvibe.inria.fr/)) and the visual representations of the signals (using [vvvv](http://vvvv.org)). We hope that this toolkit could eventually be used to foster a better understanding of our own selves, fostering introspection, and create empathy for others.
 
 <iframe src="https://player.vimeo.com/video/142287968" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
